--- a/src/styles/SideBarButton.css
+++ b/src/styles/SideBarButton.css
@@ -8,7 +8,7 @@
 
 .sidebar-card {
   position: absolute;
-  top: 25px;
+  top: 20px;
   right: 10px;
   padding: 20px;
   background-color: white;
@@ -20,7 +20,7 @@
 
 .toggle-card-button {
   position: absolute;
-  top: 25px;
+  top: 18px;
   right: 25px;
   padding: 10px 20px;
   background-color: #82c75a;
